--- a/templates/app/base.html
+++ b/templates/app/base.html
@@ -29,6 +29,9 @@
         <div class="navbar-nav ml-auto">
             {% if user.is_authenticated %}
             <a class="nav-item nav-link">Hello {{user.get_username}} !</a>
+            {% if user.role == 1 %}
+             <a class="nav-item nav-link" href="{% url 'my-reservations' username=user.username %}">My Reservations</a>
+            {% endif %}
             {% if user.is_superuser %}
             <a class="nav-item nav-link" href="{% url 'create-admin' %}">+ACCOUNT</a>
             {% endif %}
@@ -43,8 +46,8 @@
                 RECEPTION OPTIONS
                 </button>
                 <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-            <a class="dropdown-item" href="#">SELL</a>
-            <a class="dropdown-item" href="#">PRINT TICKETS</a>
+            <a class="dropdown-item" href="{% url 'show-list' %}">SELL</a>
+            <a class="dropdown-item" href="{% url 'booking-list' %}">PRINT TICKETS</a>
                 </div>
             </div>
             {% endif %}
@@ -58,6 +61,7 @@
                     <a class="dropdown-item" href="{% url 'price-list' %}">PRICES</a>
                     <a class="dropdown-item" href="{% url 'promo-list' %}">PROMOS</a>
                     <a class="dropdown-item" href="{% url 'hall-list' %}">HALLS</a>
+                    <a class="dropdown-item" href="{% url 'seat-list' %}">SEATS</a>
                     <a class="dropdown-item" href="{% url 'movie-list' %}">MOVIES</a>
                     <a class="dropdown-item" href="{% url 'show-list' %}">SHOWS</a>
                 </div>
