--- a/static/style.css
+++ b/static/style.css
@@ -75,3 +75,21 @@ a.article-title:hover {
 .account-heading {
   font-size: 2.5rem;
 }
+
+.table tbody tr td:not(:first-child) {
+  border: 1px solid blue;
+  width: 1em;
+  height:1em;
+}
+.table tbody tr td:first-child {
+  font-weight:bold;
+  width:2px;
+}
+
+.table tr td:nth-child(5) {
+  border:none!important;
+}
+
+.table {
+  border-spacing: 3em;
+}
