some changes in pdf.html

--- a/templates/app/pdf.html
+++ b/templates/app/pdf.html
@@ -47,7 +47,7 @@
             Surname: {{surname}} <br/>
             Ticket: {{ticket}} <br/>
             Show: {{show}} <br/>
-            Seat: {{seat_row}} <br/><br/>
+            Seat: {{seat}} <br/><br/>
             <hr class='hrItem' />
         </div>
     </div>
